Fix alignment.

--- a/content/themes/default/assets/stylesheets/default/tooltip.scss
+++ b/content/themes/default/assets/stylesheets/default/tooltip.scss
@@ -14,9 +14,9 @@
     color: #ffffff;
     content: attr(data-tooltip);
     font-size: 12px;
-    left: 50%;
+    left: 7px;
     line-height: 1.5;
-    margin-left: -82px;
+    margin-left: -89px;
     opacity: 0;
     padding: 12px;
     position: absolute;
@@ -34,8 +34,8 @@
     border-top: 8px solid rgba(0, 0, 0, .575);
     bottom: 100%;
     content: " ";
-    left: 50%;
-    margin-left: -4px;
+    left: 7px;
+    margin-left: -7px;
     opacity: 0;
     position: absolute;
     transform: translateY(-10px);
